@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 dee73d2475f55fc0d2c7b3d1248864a6e7a9c965 ChangeLog
+SHA1 e7bf85dc28e269a73b3d61668cece7bd54d47e64 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 90e09405bc06f282fb6dd7ef50bf5b79a9e543bb META.yml
-SHA1 bb5bd3dcb3bdbf92b91732b60bc2adaafacbf1eb Makefile.PL
+SHA1 7652c2f8671630c85e9b2127ca11060319d1d888 META.yml
+SHA1 67b60e83ea3918cc39eb5bf389c0467122f49691 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTzWoNAAoJEBa/9Pad787EmtoIAMvMH3V/tii6pjr550K4o8yk
-uhozU7g+kgu5u0oT6Hha04RBvfBFyqeTE1XIEtMaYKx2JjvKn/aPaIYOJY6aMhba
-sTrGIQ43z4086fimhFOjDq2rK/y1rP3r8SfxMrq78LmxzOdRHIL7GdRSkPdMmCOM
-TUJqqeuBRgbIUbW8zHkOKR1RhfxQtDAB5JCWre544oV4JoWukxRb78hXdH4vVxzK
-EjsBleHEAKQZAXmDnDRjMgpFyWq6mvwQ+4fcRP6a80QPTz4zkqi7yKxH7C+TIRvS
-1AH8dXJUfcMp/F2g0w1m4bu3+1j69aQT8o45phOQZXE/aT7otwwulcpy0Zh776Y=
-=UnIF
+iQEcBAEBAgAGBQJTzW1qAAoJEBa/9Pad787EFl4H/2qRLBwGe2qyUEEVNz2Fh3cP
+6XrKN1YUZQp9U5FcM1YPbDuzI+92/GA9x+By6pBkc3qwz5butLvzw3UqPZ+7veEY
+jOfCo9a4rBjKzXZ9amz2uGkpSz+MBrnhIyJCfJvBeIKOGJzo81hlEWPBswGvCD3Q
+j7hYVADXuQf7ZHupdX6DWd5QuEKaa1BjDAtO4aoTdnUVOxkqgnJDgfBuUQoZKvMU
+US/Zw4U+PuhutgDNGy0bA83L5GhRq6IieN+jcDL/7Rxlb+f27f/ua44pysFERA0n
+VYlkE1jLNhyEgEsD9E5eUHCB+GGkNndrnGA4gf1Ra6HofHpNYgzAt7BVypADzyU=
+=8h8V
 -----END PGP SIGNATURE-----
